Fix memory leaks on restart
* Upgrade to speakeasy that doesn't leak event listeners
* New module factory to support prefixes
* More permgen for testing

Change-Id: I8bf30cdb205a9d452b9239c6843105882c7def56